--- a/lammps/lib/colvars/Makefile.g++
+++ b/lammps/lib/colvars/Makefile.g++
@@ -17,7 +17,7 @@ SHELL =		/bin/sh
 SRC = colvaratoms.cpp colvarbias_abf.cpp colvarbias.cpp colvarbias_meta.cpp \
  colvar.cpp colvarcomp_angles.cpp colvarcomp.cpp colvarcomp_coordnums.cpp   \
  colvarcomp_distances.cpp colvarcomp_protein.cpp colvarcomp_rotations.cpp   \
- colvargrid.cpp colvarmodule.cpp colvarparse.cpp colvarvalue.cpp
+ colvargrid.cpp colvarmodule.cpp colvarparse.cpp colvarvalue.cpp colvarbias_alb.cpp
 
 LIB = libcolvars.a
 OBJ = $(SRC:.cpp=.o)
@@ -60,6 +60,9 @@ colvaratoms.o: colvaratoms.cpp colvarmodule.h colvartypes.h colvarproxy.h \
 colvarbias_abf.o: colvarbias_abf.cpp colvarmodule.h colvartypes.h \
  colvarproxy.h colvar.h colvarvalue.h colvarparse.h colvarbias_abf.h \
  colvarbias.h colvargrid.h
+colvarbias_alb.o: colvarbias_alb.cpp colvarmodule.h colvartypes.h \
+ colvar.h colvarvalue.h colvarparse.h colvarbias_alb.h \
+ colvarbias.h
 colvarbias.o: colvarbias.cpp colvarmodule.h colvartypes.h colvarproxy.h \
  colvarvalue.h colvarbias.h colvar.h colvarparse.h
 colvarbias_meta.o: colvarbias_meta.cpp colvar.h colvarmodule.h \
