--- a/lammps/lib/colvars/Makefile.g++
+++ b/lammps/lib/colvars/Makefile.g++
@@ -92,7 +92,7 @@ colvargrid.o: colvargrid.cpp colvarmodule.h colvartypes.h colvarproxy.h \
  colvargrid.h
 colvarmodule.o: colvarmodule.cpp colvarmodule.h colvartypes.h colvarproxy.h \
  colvarparse.h colvarvalue.h colvar.h colvarbias.h colvarbias_meta.h \
- colvargrid.h colvarbias_abf.h
+ colvargrid.h colvarbias_abf.h colvarbias_alb.h
 colvarparse.o: colvarparse.cpp colvarmodule.h colvartypes.h colvarproxy.h \
  colvarvalue.h colvarparse.h
 colvarvalue.o: colvarvalue.cpp colvarmodule.h colvartypes.h colvarproxy.h \
